feat: finish chart colours and add application packaging via jlink instead of shade which is not javafx friendly.